--- a/src/App.css
+++ b/src/App.css
@@ -145,9 +145,31 @@ body{
 .resident-card{
     width: 250px;
     height: 150px;
+    padding: 10px;
     background: black;
     box-shadow: 0px 0px 5px 5px rgb(24, 46, 16);
     border-radius: 15px;
     color:white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+}
+
+.resident-card .resident-state{
+    position: absolute;
+    color: black;
+    z-index:2;
+    top: 0;
+    left: 0;
+    background-color: white ;
+
+}
+
+
+.resident-card img{
+    max-width: 120px;
+    aspect-ratio: 1;
+    border-radius: 50%;
 }
 
