--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,10 @@ body{
     background-color: black ;
 }
 
-
-
+.App{
+    min-height: 80vh;
+    
+}
 
 /* ----- HEADER STYLES ----*/
 
@@ -67,7 +69,8 @@ body{
     align-items: center;
     max-width: 90%;
     margin:20px auto;
-    box-shadow: 0px 0px 5px 5px rgb(24, 46, 16);
+    background-color: black ;
+    box-shadow: 4px 4px 4px 4px rgb(54, 102, 37,0.22);
     border-radius: 20px;
     font-size: 14px;
     padding: 10px;
@@ -111,9 +114,10 @@ body{
     max-width: 90%;
     min-width: 70%;
     height: 30px;
-    background-color: rgb(24, 46, 16,0.8) ;
+    background-color: black ;
+    box-shadow: 4px 4px 4px 4px rgb(54, 102, 37,0.22);
     border-radius: 12px;
-    border: 3px solid rgb(24, 46, 16);
+    border:none;
     color: white;
 }
 
@@ -143,33 +147,97 @@ body{
 }
 
 .resident-card{
-    width: 250px;
+    width: 300px;
     height: 150px;
-    padding: 10px;
-    background: black;
-    box-shadow: 0px 0px 5px 5px rgb(24, 46, 16);
+    background: rgb(0, 0, 0 ,0.7);
     border-radius: 15px;
+    box-shadow: 4px 4px 4px 4px rgb(54, 102, 37,0.22);
     color:white;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     position: relative;
 }
 
+.resident-card:hover{
+    width: 350px;
+    height: 180px;
+    background: rgba(2, 31, 7, 0.7);
+    box-shadow: none;
+}
+
+
+
 .resident-card .resident-state{
     position: absolute;
-    color: black;
+    color: white;
     z-index:2;
-    top: 0;
+    top: 8%;
     left: 0;
-    background-color: white ;
-
+    font-size: 8px;
+    background-color: black;
+    height: 15px;
+    min-width: 70px;
+    width: max-content;
+    border-top-right-radius: 7.5px;
+    border-bottom-right-radius: 7.5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-right: 3px;
 }
 
+.Alive{
+    height: 8px;
+    width: 8px;
+    background-color: green;
+    border-radius: 7.5px;
+}
+
+.Dead{
+    height: 8px;
+    width: 8px;
+    background-color: red;
+    border-radius: 7.5px;
+}
+
+.unknown{
+    height: 8px;
+    width: 8px;
+    background-color: grey;
+    border-radius: 7.5px;
+}
+
+p{
+    margin-left: 2px;
+}
 
 .resident-card img{
-    max-width: 120px;
+    max-width: 150px;
     aspect-ratio: 1;
-    border-radius: 50%;
+    border-top-left-radius: 15px ;
+    border-bottom-left-radius: 15px ;
 }
+
+.resident-card:hover img{
+    max-width: 180px;
+    aspect-ratio: 1;
+}
+
+.resident-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 10px;
+}
+
+
+
+.resident-info h5{
+    margin: 0;
+}
+
+.resident-info span{
+    color: grey;
+}
+
 
